--- a/charts/open-map-tiles/values.yaml
+++ b/charts/open-map-tiles/values.yaml
@@ -12,9 +12,10 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: NodePort
+  type: ClusterIP
+  #type: NodePort
   port: 80
-  nodePort: 30080
+  #nodePort: 30080
 
 ingress:
   enabled: true
