--- a/charts/redis/values.yaml
+++ b/charts/redis/values.yaml
@@ -168,15 +168,15 @@ master:
   ## Redis Master Service properties
   service:
     ##  Redis Master Service type
-    # type: ClusterIP
-    type: NodePort
+    type: ClusterIP
+    #type: NodePort
     port: 6379
 
     ## Specify the nodePort value for the LoadBalancer and NodePort service types.
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
     ##
     # nodePort:
-    nodePort: 30379
+    #nodePort: 30379
 
     ## Provide any additional annotations which may be required. This can be used to
     ## set the LoadBalancer service type to internal only.
