--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -46,7 +46,7 @@ repo:
         bin: bin/meep-mon-engine
         # location of deployment chart
         chart: charts/meep-mon-engine
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-mon-engine.yaml
         # extra build flags
         build-flags:
@@ -96,7 +96,7 @@ repo:
         bin: bin/meep-platform-ctrl
         # location of deployment chart
         chart: charts/meep-platform-ctrl
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-platform-ctrl.yaml
         # enable meepctl build
         build: true
@@ -123,7 +123,7 @@ repo:
         bin: bin/meep-virt-engine
         # location of deployment chart
         chart: charts/meep-virt-engine
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-virt-engine.yaml
         # enable meepctl build
         build: true
@@ -164,7 +164,7 @@ repo:
         bin: bin/meep-webhook
         # location of deployment chart
         chart: charts/meep-webhook
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-webhook.yaml
         # extra build flags
         build-flags:
@@ -260,7 +260,7 @@ repo:
         bin: bin/meep-gis-engine
         # location of deployment chart
         chart: charts/meep-gis-engine
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-gis-engine.yaml
         # enable meepctl build
         build: true
@@ -281,7 +281,7 @@ repo:
         bin: bin/meep-loc-serv
         # location of deployment chart
         chart: charts/meep-loc-serv
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-loc-serv.yaml
         # extra build flags
         build-flags:
@@ -305,7 +305,7 @@ repo:
         bin: bin/meep-metrics-engine
         # location of deployment chart
         chart: charts/meep-metrics-engine
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-metrics-engine.yaml
         # extra build flags
         build-flags:
@@ -329,7 +329,7 @@ repo:
         bin: bin/meep-mg-manager
         # location of deployment chart
         chart: charts/meep-mg-manager
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-mg-manager.yaml
         # enable meepctl build
         build: true
@@ -350,7 +350,7 @@ repo:
         bin: bin/meep-rnis
         # location of deployment chart
         chart: charts/meep-rnis
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-rnis.yaml
         # extra build flags
         build-flags:
@@ -374,7 +374,7 @@ repo:
         bin: bin/meep-sandbox-ctrl
         # location of deployment chart
         chart: charts/meep-sandbox-ctrl
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-sandbox-ctrl.yaml
         # enable meepctl build
         build: true
@@ -398,7 +398,7 @@ repo:
         bin: bin/meep-tc-engine
         # location of deployment chart
         chart: charts/meep-tc-engine
-        # user supplied value file located @ .meep/user/values
+        # user supplied value file located @ .meep/user/values (use below file name)
         chart-user-values: meep-tc-engine.yaml
         # enable meepctl build
         build: true
@@ -439,7 +439,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/couchdb
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-couchdb.yaml
     meep-docker-registry:
       # enable meepctl build -> deps are never built
@@ -450,7 +450,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/docker-registry
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-docker-registry.yaml
     meep-grafana:
       # enable meepctl build -> deps are never built
@@ -461,7 +461,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/grafana
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-grafana.yaml
     meep-influxdb:
       # enable meepctl build -> deps are never built
@@ -472,7 +472,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/influxdb
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-influxdb.yaml
     meep-kube-state-metrics:
       # enable meepctl build -> deps are never built
@@ -483,7 +483,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/kube-state-metrics
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-kube-state-metrics.yaml
     meep-ingress:
       # enable meepctl build -> deps are never built
@@ -494,7 +494,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/nginx-ingress
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-ingress.yaml
     meep-alt-ingress:
       # enable meepctl build -> deps are never built
@@ -507,7 +507,7 @@ repo:
       chart: charts/nginx-ingress
       # uses different default values
       values: charts/nginx-ingress/alt-values.yaml
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-alt-ingress.yaml
     meep-redis:
       # enable meepctl build -> deps are never built
@@ -518,7 +518,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/redis
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-redis.yaml
     meep-open-map-tiles:
       # enable meepctl build -> deps are never built
@@ -529,7 +529,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/open-map-tiles
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-open-map-tiles.yaml
     meep-postgis:
       # enable meepctl build -> deps are never built
@@ -540,7 +540,7 @@ repo:
       deploy: true
       # location of deployment chart
       chart: charts/postgis
-      # user supplied value file located @ .meep/user/values
+      # user supplied value file located @ .meep/user/values (use below file name)
       chart-user-values: meep-postgis.yaml
 
   #------------------------------
