--- a/charts/meep-platform-ctrl/templates/service.yaml
+++ b/charts/meep-platform-ctrl/templates/service.yaml
@@ -17,6 +17,6 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.deployment.port }}
-      {{- if .Values.nodePort }}
+      {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
