--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: 1.6.4
+version: 1.6.5
 repo:
   name: AdvantEDGE
 
@@ -81,6 +81,13 @@ repo:
         # api-url: https://gitlab.com
         # OAuth k8s secret (data: client-id, secret)
         secret: meep-oauth-gitlab
+
+    # Default monitoring dashboards
+    dashboards:
+      network-metrics-point-to-point: dashboards/network-metrics-point-to-point.json
+      network-metrics-aggregation: dashboards/network-metrics-aggregation.json
+      http-single-log: dashboards/http-log-byId.json
+      http-logs-aggregation: dashboards/http-loggers.json
 
   #------------------------------
   #  Resource Prerequisites
