--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -88,7 +88,8 @@ repo:
       network-metrics-aggregation: dashboards/network-metrics-aggregation.json
       http-single-log: dashboards/http-log-byId.json
       http-logs-aggregation: dashboards/http-loggers.json
-      meep-node-exporter: dashboards/meep-node-exporter.json
+      platform-advantedge: dashboards/platform-advantedge.json
+      runtime-environment-node: dashboards/runtime-environment-node.json
 
   #------------------------------
   #  Resource Prerequisites
