--- a/charts/couchdb/templates/service.yaml
+++ b/charts/couchdb/templates/service.yaml
@@ -9,6 +9,10 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     meepOrigin: {{ .Values.meepOrigin }}
+{{- if .Values.service.annotations }}
+  annotations:
+{{ toYaml .Values.service.annotations | indent 4 }}
+{{- end }}
 spec:
   ports:
     - port: {{ .Values.service.externalPort }}
@@ -19,6 +23,5 @@ spec:
       {{- end }}
   type: {{ .Values.service.type }}
   selector:
-    app: {{ template "couchdb.name" . }}
-    release: {{ .Release.Name }}
+{{ include "couchdb.ss.selector" . | indent 4 }}
 {{- end -}}
