--- a/charts/couchdb/templates/serviceaccount.yaml
+++ b/charts/couchdb/templates/serviceaccount.yaml
@@ -1,18 +1,16 @@
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
-kind: Service
+kind: ServiceAccount
 metadata:
-  name: {{ template "couchdb.fullname" . }}
+  name: {{ template "couchdb.serviceAccount" . }}
   labels:
     app: {{ template "couchdb.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     meepOrigin: {{ .Values.meepOrigin }}
-spec:
-  clusterIP: None
-  publishNotReadyAddresses: true
-  ports:
-    - name: couchdb
-      port: 5984
-  selector:
-{{ include "couchdb.ss.selector" . | indent 4 }}
+{{- if .Values.serviceAccount.imagePullSecrets }}
+imagePullSecrets:
+{{ toYaml .Values.serviceAccount.imagePullSecrets }}
+{{- end }}
+{{- end }}
