--- a/charts/couchdb/Chart.yaml
+++ b/charts/couchdb/Chart.yaml
@@ -1,13 +1,19 @@
-appVersion: 2.1.1
+apiVersion: v2
+appVersion: 3.1.0
 description: A database featuring seamless multi-master sync, that scales from big
   data to mobile, with an intuitive HTTP/JSON API and designed for reliability.
 home: https://couchdb.apache.org/
 icon: http://couchdb.apache.org/CouchDB-visual-identity/logo/CouchDB-couch-symbol.svg
+keywords:
+- couchdb
+- database
+- nosql
 maintainers:
 - email: kocolosk@apache.org
   name: kocolosk
+- email: willholley@apache.org
+  name: willholley
 name: couchdb
 sources:
-- https://github.com/apache/couchdb
-- https://github.com/kocolosk/couchdb-statefulset-assembler
-version: 0.1.6
+- https://github.com/apache/couchdb-docker
+version: 3.3.4
