--- a/charts/couchdb/templates/ingress.yaml
+++ b/charts/couchdb/templates/ingress.yaml
@@ -1,7 +1,8 @@
 {{- if .Values.ingress.enabled -}}
 {{- $serviceName := include "couchdb.fullname" . -}}
 {{- $servicePort := .Values.service.externalPort -}}
-apiVersion: extensions/v1beta1
+{{- $path := .Values.ingress.path | quote -}}
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "couchdb.fullname" . }}
@@ -21,7 +22,7 @@ spec:
     - host: {{ $host }}
       http:
         paths:
-          - path: /
+          - path: {{ $path }}
             backend:
               serviceName: {{ $serviceName }}
               servicePort: {{ $servicePort }}
