--- a/charts/couchdb/templates/persistentvolumeclaim.yaml
+++ b/charts/couchdb/templates/persistentvolumeclaim.yaml
@@ -12,6 +12,7 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    meepOrigin: {{ .Values.meepOrigin }}
   name: {{ template "couchdb.fullname" . }}
 spec:
   accessModes:
