--- a/charts/couchdb/templates/storageclass.yaml
+++ b/charts/couchdb/templates/storageclass.yaml
@@ -8,6 +8,7 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    meepOrigin: {{ .Values.meepOrigin }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 {{- end }}
