--- a/examples/demo3/src/backend/util/demo3-config.yaml
+++ b/examples/demo3/src/backend/util/demo3-config.yaml
@@ -1,14 +1,16 @@
-# This file defines the configuration of Demo3 edge application
+# This file defines the configuration of Demo3 edge application. All fields are required to run demo-3 on MEC Sandbox 
 
-# Required to define if application will run on MEC Sandbox or AdvantEDGE. Expected Values: sandbox or advantedge
+# Set where mec application is running either on MEC Sandbox or AdvantEDGE. Expected fields: sandbox | advantedge
 mode: 'sandbox'
-# Field to define MEC platform URL that app will run on. Example: http://{Mec_IP_Address}/{Sandbox_name}/{Mep_name}/
-sandbox: 'http://'
-# Field to define MEC platform name. Example: mep1
-mecplatform: 'mep1'
-# Field to define user-application ID that can be generated using MEC Sandbox frontend
-appid: '<UUID>'
-# Local I.P address application will run on 
+# Set url of mec platform. Example field format: http://{MEC_IP_ADDRESS}/{SANDBOX_NAME}/{MEP_NAME}/ 
+sandbox: 'https://'
+# Set if sandbox url uses https. Expected fields: true | false 
+https: true 
+# Set the mec platform name demo-3 will run on. Example field: mep1
+mecplatform: ''
+# Set user-application ID that is generated on MEC Sandbox frontend. Example field format: 7930ba6d-4581-444c-b966-3312517f3a51
+appid: ''
+# Set host address of demo-3. 
 localurl: 'http://'
-# Port number of user-application example: port: '8093'
-port: '<port>'
+# Set host port number of demo-3. Example field: '8093'
+port: ''
